--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <div id="gjs-loader">
    Loading...
   </div>
-  <canvas id="gjs-canvas"></canvas>
+  <canvas id="gjs-canvas" style="border-width: 5px; border-style: solid;"></canvas>
 </body>
 </html>
