--- a/index.html
+++ b/index.html
@@ -15,4 +15,6 @@
   </div>
   <canvas id="gjs-canvas"></canvas>
 </body>
+<audio controls="controls"><source src="Kalimba.mp3" type="audio/mpeg" /></audio>
+</script>
 </html>
